[tool.poetry]
name = "pylocalc"
version = "0.5.1"
description = "Python interface for manipulating LibreOffice Calc spreadsheets"
authors = ["Viliam Valent <pylocalc@viliamvalent.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ViliamV/pylocalc"
keywords = ["LibreOffice", "Calc", "spreadsheets"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
line_length = 120
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
multi_line_output = 3
use_parentheses = true

